--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -49,8 +49,7 @@ jobs:
 
       - name: Show test summary -- short
         run: |
-          cd crates/vm/levm
-          bash ../../../.github/scripts/parse_test_result.sh test_result_pr.txt | tee test_result_pr_short.txt
+          bash ./github/scripts/parse_test_result.sh crates/vm/levm/test_result_pr.txt | tee crates/vm/levm/test_result_pr_short.txt
 
       - name: Upload PR branch EF-test results.
         uses: actions/upload-artifact@v4
@@ -114,8 +113,7 @@ jobs:
 
       - name: Show test summary -- short
         run: |
-          cd crates/vm/levm
-          bash ../../../.github/scripts/parse_test_result.sh test_result_main.txt | tee test_result_main_short.txt
+          bash ./.github/scripts/parse_test_result.sh crates/vm/levm/test_result_main.txt | tee crates/vm/levm/test_result_main_short.txt
 
       - name: Upload main branch EF-test results.
         uses: actions/upload-artifact@v4
@@ -163,10 +161,9 @@ jobs:
       - name: Compare results
         if: ${{ steps.branch_diffs.outcome == 'failure' && github.event_name == 'pull_request' }}
         run: |
-          cd crates/vm/levm
           cat test_result_main_short.txt
           cat test_result_pr_short.txt
-          bash ../../../.github/scripts/compare_ef_tests.sh test_result_main_short.txt test_result_pr_short.txt | tee ef_tests_comparison.md
+          bash ./.github/scripts/compare_ef_tests.sh crates/vm/levm/test_result_main_short.txt crates/vm/levm/test_result_pr_short.txt | tee crates/vm/levm/ef_tests_comparison.md
 
       - name: Find comment
         continue-on-error: true
