--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -200,7 +200,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.pull_request.number }}
           body: |
-            \# EF Tests Comparison
+            # EF Tests Comparison
             Same results between main branch and the current PR.
           edit-mode: replace
 
