--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -29,13 +29,13 @@ envy = "0.4.2"
 thiserror.workspace = true
 directories = "5.0.1"
 
+ethrex-sdk = { path = "./sdk" }
+
 zkvm_interface = { path = "./prover/zkvm/interface/", default-features = false }
 
-# risc0
 risc0-zkvm = { version = "1.2.2" }
-# sp1
 sp1-sdk = { version = "4.1.0" }
-ethrex-sdk = { path = "./sdk" }
+pico-vm = { git = "https://github.com/brevis-network/pico", optional = true }
 
 ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
 
@@ -57,3 +57,4 @@ panic = "deny"
 [features]
 default = []
 metrics = ["ethrex-metrics/l2"]
+pico = ["dep:pico-vm"]
