--- a/crates/l2/prover/zkvm/interface/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/Cargo.toml
@@ -16,7 +16,8 @@ ethrex-trie = { path = "../../../../storage/trie", default-features = false }
 
 [build-dependencies]
 risc0-build = { version = "1.2.2" }
-sp1-build = "4.1.0"
+sp1-build = { version = "4.1.0" }
+pico-cli = { git = "https://github.com/brevis-network/pico", optional = true }
 
 [package.metadata.risc0]
 methods = ["risc0"]
@@ -25,6 +26,7 @@ methods = ["risc0"]
 default = []
 build_risc0 = []
 build_sp1 = []
+build_pico = ["dep:pico-cli"]
 
 [lib]
 path = "./src/lib.rs"
