--- a/.github/workflows/ci_levm.yaml
+++ b/.github/workflows/ci_levm.yaml
@@ -41,6 +41,7 @@ jobs:
       - name: Run tests
         run: |
           cd crates/vm/levm
+          set -o pipefail
           make run-evm-ef-tests-ci | tee test_result_pr.txt
 
       - name: Show test summary -- full
@@ -58,6 +59,13 @@ jobs:
         with:
           name: pr-ef-test-data
           path: crates/vm/levm/test_result_pr_short.txt
+
+        # This is only needed in the PR. As soon as this is merged, this should be deleted
+      - name: Upload comparison shell script
+        uses: actions/upload-artifact@v4
+        with:
+          name: ef-test-shell-script
+          path: .github/scripts/parse_test_result.sh
 
       - name: Check EF-TESTS status is 100%
         run: |
@@ -93,11 +101,19 @@ jobs:
       - name: Run tests
         run: |
           cd crates/vm/levm
+          set -o pipefail
           make run-evm-ef-tests-ci | tee test_result_main.txt
 
       - name: Show test summary -- full
         run: |
           cd crates/vm/levm && awk '/Summary: /,0' test_result_main.txt
+
+        # This is only needed in the PR. As soon as this is merged, this should be deleted
+      - name: Download shell script
+        uses: actions/download-artifact@v4
+        with:
+          name: ef-test-shell-script
+          path: .github/scripts/
 
       - name: Show test summary -- short
         run: |
