--- a/.github/workflows/daily_reports.yaml
+++ b/.github/workflows/daily_reports.yaml
@@ -108,6 +108,7 @@ jobs:
       - name: Run tests
         run: |
           cd crates/vm/levm
+          set -o pipefail
           make generate-evm-ef-tests-report | tee test_result.txt
 
       - name: Post results in summary
