--- a/crates/blockchain/Cargo.toml
+++ b/crates/blockchain/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ethrex-levm = { path = "../vm/levm", default-features = false }
 thiserror.workspace = true
 sha3.workspace = true
 tracing.workspace = true
@@ -31,6 +30,10 @@ path = "./blockchain.rs"
 
 [features]
 default = ["c-kzg"]
-libmdbx = ["ethrex-common/libmdbx", "ethrex-storage/default", "ethrex-vm/libmdbx"]
-c-kzg = ["ethrex-common/c-kzg", "ethrex-levm/c-kzg"]
+libmdbx = [
+    "ethrex-common/libmdbx",
+    "ethrex-storage/default",
+    "ethrex-vm/libmdbx",
+]
+c-kzg = ["ethrex-vm/c-kzg"]
 metrics = ["ethrex-metrics/transactions"]
