--- a/cmd/ef_tests/state/Cargo.toml
+++ b/cmd/ef_tests/state/Cargo.toml
@@ -4,12 +4,13 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-ethrex-blockchain = { workspace = true }
+ethrex-blockchain.workspace = true
 ethrex-common.workspace = true
 ethrex-storage.workspace = true
 ethrex-rlp.workspace = true
-ethrex-vm = { workspace = true }
+ethrex-vm = { path = "../../../crates/vm" }
 ethrex-levm = { path = "../../../crates/vm/levm" }
+
 serde.workspace = true
 serde_json.workspace = true
 bytes.workspace = true
