--- a/crates/blockchain/Cargo.toml
+++ b/crates/blockchain/Cargo.toml
@@ -6,17 +6,19 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ethrex-rlp.workspace = true
+ethrex-common.workspace = true
+ethrex-storage.workspace = true
+ethrex-vm = { path = "../vm", default-features = false }
 ethrex-levm = { path = "../vm/levm", default-features = false }
+
 thiserror.workspace = true
 sha3.workspace = true
 tracing.workspace = true
 bytes.workspace = true
 cfg-if = "1.0.0"
 
-ethrex-rlp.workspace = true
-ethrex-common = { path = "../common", default-features = false }
-ethrex-storage = { path = "../storage/store", default-features = false }
-ethrex-vm = { path = "../vm", default-features = false }
+
 
 k256 = { version = "0.13.3", features = ["ecdh"] }
 
