--- a/crates/blockchain/metrics/Cargo.toml
+++ b/crates/blockchain/metrics/Cargo.toml
@@ -12,7 +12,7 @@ thiserror.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 
-ethrex-common = { path = "../../common", default-features = false }
+ethrex-common.workspace = true
 
 
 prometheus = { version = "0.13.4", optional = true }
