--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ethrex-common = { path = "../common", default-features = false }
-ethrex-storage = { path = "../storage/store", default-features = false }
+ethrex-common.workspace = true
+ethrex-storage.workspace = true
 ethrex-levm = { path = "./levm", default-features = false }
-ethrex-trie = { path = "../storage/trie", default-features = false }
-ethrex-rlp = { path = "../common/rlp", default-features = false }
+ethrex-trie.workspace = true
+ethrex-rlp.workspace = true
+
 revm = { version = "18.0.0", features = [
   "serde",
   "std",
