--- a/crates/vm/levm/Cargo.toml
+++ b/crates/vm/levm/Cargo.toml
@@ -4,7 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-ethrex-common = { path = "../../common", default-features = false }
+ethrex-common.workspace = true
 ethrex-rlp.workspace = true
 revm-primitives = { version = "14.0.0", features = [
   "std",
