--- a/crates/l2/prover/zkvm/interface/pico/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/pico/Cargo.toml
@@ -13,3 +13,8 @@ ethrex-core = { path = "../../../../../common", default-features = false }
 ethrex-rlp = { path = "../../../../../common/rlp" }
 ethrex-vm = { path = "../../../../../vm", default-features = false }
 ethrex-blockchain = { path = "../../../../../blockchain", default-features = false }
+
+[patch.crates-io]
+# Pico has its own patch for secp256k1 but it doesn't compile: it has a git dependency for a branch that
+# doesn't exists, and another git dependency to an seemingly private repo. The SP1 patch worked well.
+secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.1" }
