--- a/crates/networking/p2p/Cargo.toml
+++ b/crates/networking/p2p/Cargo.toml
@@ -41,3 +41,7 @@ hex-literal = "0.4.1"
 
 [lib]
 path = "./p2p.rs"
+
+[features]
+default = ["c-kzg"]
+c-kzg = ["ethrex-blockchain/c-kzg", "ethrex-common/c-kzg"]
