--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -42,8 +42,9 @@ name = "ethrex"
 path = "./ethrex.rs"
 
 [features]
-default = ["dep:ethrex-storage", "libmdbx"]
+default = ["dep:ethrex-storage", "libmdbx", "c-kzg"]
 dev = ["dep:ethrex-dev"]
+c-kzg = ["ethrex-vm/c-kzg", "ethrex-common/c-kzg", "ethrex-blockchain/c-kzg", "ethrex-p2p/c-kzg"]
 metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics"]
 libmdbx = ["dep:libmdbx", "ethrex-storage/libmdbx"]
 redb = ["dep:redb", "ethrex-storage/redb"]
