--- a/cmd/ef_tests/blockchain/Makefile
+++ b/cmd/ef_tests/blockchain/Makefile
@@ -26,5 +26,5 @@ clean-vectors: ## 🗑️  Clean test vectors
 test: $(SPECTEST_VECTORS_DIR) ## 🧪 Run blockchain tests
 	cargo test
 
-test-levm: $(SPECTEST_VECTORS_DIR) ## 🧪 Run blockchain tests
+test-levm: $(SPECTEST_VECTORS_DIR) ## 🧪 Run blockchain tests with LEVM
 	cargo test --features levm
