--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -18,7 +18,7 @@ ethrex-rlp.workspace = true
 ethrex-rpc.workspace = true
 ethrex-blockchain.workspace = true
 ethrex-storage.workspace = true
-ethrex-vm = { path = "../vm", default-features = false }
+ethrex-vm.workspace = true
 ethrex-dev = { path = "../../crates/blockchain/dev", default-features = false }
 hex.workspace = true
 bytes.workspace = true
