--- a/crates/vm/levm/Cargo.toml
+++ b/crates/vm/levm/Cargo.toml
@@ -40,7 +40,7 @@ colored = "2.1.0"
 spinoff = "0.8.0"
 
 [features]
-default = ["c-kzg"]
+default = []
 c-kzg = ["ethrex-common/c-kzg"]
 ethereum_foundation_tests = []
 
