fix build (fails perf-sp1 and perf-risc0 tests)

--- a/crates/l2/prover/bench/Cargo.toml
+++ b/crates/l2/prover/bench/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-ethrex-core = { path = "../../../common/", default-features = false }
+ethrex-common = { path = "../../../common/", default-features = false }
 ethrex-vm = { path = "../../../vm/", default-features = false }
 ethrex-storage = { path = "../../../storage/store", default-features = false }
 ethrex-rlp.workspace = true
