--- a/crates/l2/prover/Cargo.toml
+++ b/crates/l2/prover/Cargo.toml
@@ -46,12 +46,10 @@ path = "src/main.rs"
 
 [features]
 default = []
-## risc0
 build_risc0 = ["zkvm_interface/build_risc0"]
-gpu = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]
-## sp1
 build_sp1 = ["zkvm_interface/build_sp1"]
-
+l2 = ["ethrex-vm/l2"] # the prover can work with both l1 or l2 blocks
+gpu = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]
 
 [lints.clippy]
 unwrap_used = "deny"
