Disable `blst` by default.

--- a/cmd/ef_tests/state/Cargo.toml
+++ b/cmd/ef_tests/state/Cargo.toml
@@ -37,8 +37,9 @@ hex = "0.4.3"
 path = "./lib.rs"
 
 [features]
-default = ["c-kzg"]
+default = ["c-kzg", "blst"]
 c-kzg = ["ethrex-vm/c-kzg", "ethrex-levm/c-kzg", "ethrex-common/c-kzg"]
+blst = ["ethrex-vm/blst"]
 
 [[test]]
 name = "all"
