--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -39,7 +39,7 @@ ethereum-types.workspace = true
 path = "./vm.rs"
 
 [features]
-default = ["blst"]
+default = []
 l2 = []
 c-kzg = ["revm/c-kzg", "ethrex-levm/c-kzg", "ethrex-common/c-kzg"]
 blst = ["revm/blst"]
