--- a/crates/l2/prover/Cargo.toml
+++ b/crates/l2/prover/Cargo.toml
@@ -26,7 +26,7 @@ ethrex-l2.workspace = true
 zkvm_interface = { path = "./zkvm/interface", default-features = false }
 
 # risc0
-risc0-zkvm = { version = "1.2.2" }
+risc0-zkvm = { version = "1.2.2", optional = true }
 
 # sp1
 sp1-sdk = "4.1.0"
@@ -49,7 +49,7 @@ path = "src/main.rs"
 
 [features]
 default = []
-build_risc0 = ["zkvm_interface/build_risc0"]
+build_risc0 = ["zkvm_interface/build_risc0", "dep:risc0-zkvm"]
 build_sp1 = ["zkvm_interface/build_sp1"]
 build_pico = ["zkvm_interface/build_pico", "ethrex-l2/pico", "dep:pico-sdk"]
 l2 = ["ethrex-vm/l2"]                                                        # the prover can work with both l1 or l2 blocks
