--- a/crates/l2/Makefile
+++ b/crates/l2/Makefile
@@ -67,6 +67,7 @@ init-l1: ## 🚀 Initializes an L1 Lambda ethrex Client
 	--http.port ${L1_PORT} \
 	--http.addr 0.0.0.0 \
 	--authrpc.port ${L1_AUTH_PORT} \
+	--dev \
 	--datadir ${ethrex_L1_DEV_LIBMDBX}
 
 init-l1-levm: ## 🚀 Initializes an L1 Lambda ethrex Client with LEVM
@@ -79,6 +80,7 @@ init-l1-levm: ## 🚀 Initializes an L1 Lambda ethrex Client with LEVM
     --http.addr 0.0.0.0 \
     --authrpc.port ${L1_AUTH_PORT} \
 	--evm levm \
+	--dev \
     --datadir ${ethrex_L1_DEV_LIBMDBX}
 
 down-local-l1: ## 🛑 Shuts down the L1 Lambda ethrex Client
