--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -28,7 +28,6 @@ anyhow = "1.0.86"
 rand = "0.8.5"
 local-ip-address = "0.6"
 tokio-util.workspace = true
-libmdbx = { workspace = true, optional = true }
 redb = { workspace = true, optional = true }
 lazy_static.workspace = true
 
@@ -46,7 +45,7 @@ default = ["libmdbx", "c-kzg", "blst"]
 dev = ["dep:ethrex-dev"]
 c-kzg = ["ethrex-vm/c-kzg", "ethrex-common/c-kzg", "ethrex-blockchain/c-kzg", "ethrex-p2p/c-kzg"]
 metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics"]
-libmdbx = ["dep:libmdbx", "ethrex-storage/libmdbx"]
+libmdbx = ["ethrex-storage/libmdbx"]
 redb = ["dep:redb", "ethrex-storage/redb"]
 blst = ["ethrex-vm/blst"]
 l2 = ["dep:ethrex-l2", "ethrex-vm/l2"]
