--- a/crates/blockchain/dev/Cargo.toml
+++ b/crates/blockchain/dev/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 ethrex-rpc.workspace = true
+ethrex-rpc-clients.workspace = true
 
 tokio.workspace = true
 tracing.workspace = true
