--- a/cmd/ethrex_l2/Cargo.toml
+++ b/cmd/ethrex_l2/Cargo.toml
@@ -11,6 +11,7 @@ ethrex-blockchain.workspace = true
 ethrex-prover.workspace = true
 ethrex-rlp.workspace = true
 ethrex-rpc.workspace = true
+ethrex-rpc-clients.workspace = true
 
 serde_json.workspace = true
 serde.workspace = true
