--- a/crates/l2/contracts/Cargo.toml
+++ b/crates/l2/contracts/Cargo.toml
@@ -21,6 +21,7 @@ thiserror.workspace = true
 ethrex-l2 = { path = "../../l2" }
 ethrex-sdk = { path = "../../l2/sdk" }
 ethrex-common = { path = "../../common" }
+ethrex-rpc-clients = { path = "../../common/rpc_clients" }
 
 [[bin]]
 name = "ethrex_l2_l1_deployer"
