--- a/crates/networking/rpc/Cargo.toml
+++ b/crates/networking/rpc/Cargo.toml
@@ -28,6 +28,12 @@ reqwest.workspace = true
 k256 = { version = "0.13.3", features = ["ecdh"] }
 sha3 = "0.10.8"
 
+# Clients
+envy = "0.4.2"
+thiserror.workspace = true
+secp256k1.workspace = true
+keccak-hash.workspace = true
+
 [dev-dependencies]
 hex-literal = "0.4.1"
 
