--- a/crates/storage/store/Cargo.toml
+++ b/crates/storage/store/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 ethrex-rlp.workspace = true
 ethrex-common.workspace = true
 ethrex-trie.workspace = true
-
+scc = "2.3.3"
 ethereum-types.workspace = true
 anyhow = "1.0.86"
 bytes.workspace = true
