--- a/cmd/ethrex/Cargo.toml
+++ b/cmd/ethrex/Cargo.toml
@@ -49,4 +49,5 @@ metrics = ["ethrex-blockchain/metrics", "ethrex-l2/metrics"]
 libmdbx = ["dep:libmdbx", "ethrex-storage/libmdbx"]
 redb = ["dep:redb", "ethrex-storage/redb"]
 blst = ["ethrex-vm/blst"]
-l2 = ["dep:ethrex-l2", "ethrex-vm/l2", "ethrex-rpc/l2"]
+l2 = ["dep:ethrex-l2", "ethrex-vm/l2"]
+preconfs = ["l2", "ethrex-rpc/preconfs"]
