--- a/crates/vm/levm/Cargo.toml
+++ b/crates/vm/levm/Cargo.toml
@@ -20,6 +20,7 @@ sha3 = "0.10.8"
 datatest-stable = "0.2.9"
 walkdir = "2.5.0"
 libsecp256k1 = "0.7.1"
+hex.workspace = true
 sha2 = "0.10.8"
 ripemd = "0.1.3"
 num-bigint = "0.4.5"
@@ -35,9 +36,9 @@ bls12_381 = { git = "https://github.com/lambdaclass/bls12_381", branch = "expose
 ] }
 
 [dev-dependencies]
-hex.workspace = true
 colored = "2.1.0"
 spinoff = "0.8.0"
+hex = "0.4.3"
 
 [features]
 default = []
