--- a/.github/workflows/ci_l2_prover.yaml
+++ b/.github/workflows/ci_l2_prover.yaml
@@ -31,15 +31,15 @@ jobs:
         run: cargo ${{ matrix.action.command }} ${{ matrix.action.args }}
 
   # TODO(#1974): Restore this job once we fix risc0
-  # test:
+  test:
     # "Test" is a required check, don't change the name
-    # name: Test
-    # runs-on: ubuntu-latest
-    # steps:
-    #   - name: Checkout sources
-    #     uses: actions/checkout@v4
-    #   - name: Rust toolchain install
-    #     uses: dtolnay/rust-toolchain@stable
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+      - name: Rust toolchain install
+        uses: dtolnay/rust-toolchain@stable
       # Use cargo-risczero v1.2.0
       # The risc0-zkvm crate should match this version
       # - name: RISC-V RISC0 toolchain install
@@ -52,19 +52,19 @@ jobs:
       #   run: |
       #     cd crates/l2/prover
       #     cargo build --release --features build_risc0
-      # - name: Test Prover Execution
-      #   run: |
-      #     cd crates/l2/prover
-      #     RUST_LOG=info make perf-risc0
-      # - name: RISC-V SP1 toolchain install
-      #   run: |
-      #     curl -L https://sp1.succinct.xyz | bash
-      #     ~/.sp1/bin/sp1up --version 3.0.0
-      # - name: Build prover and SP1's zkVM
-      #   run: |
-      #     cd crates/l2/prover
-      #     cargo build --release --features build_sp1
-      # - name: Test Prover Execution
-      #   run: |
-      #     cd crates/l2/prover
-      #     RUST_LOG=info make perf-sp1
+      - name: Test Prover Execution
+        run: |
+          cd crates/l2/prover
+          RUST_LOG=info make perf-risc0
+      - name: RISC-V SP1 toolchain install
+        run: |
+          curl -L https://sp1.succinct.xyz | bash
+          ~/.sp1/bin/sp1up --version 3.0.0
+      - name: Build prover and SP1's zkVM
+        run: |
+          cd crates/l2/prover
+          cargo build --release --features build_sp1
+      - name: Test Prover Execution
+        run: |
+          cd crates/l2/prover
+          RUST_LOG=info make perf-sp1
