--- a/.github/workflows/ci_l2_prover.yaml
+++ b/.github/workflows/ci_l2_prover.yaml
@@ -30,7 +30,6 @@ jobs:
       - name: ${{ matrix.action.command }} Command
         run: cargo ${{ matrix.action.command }} ${{ matrix.action.args }}
 
-  # TODO(#1974): Restore this job once we fix risc0
   test:
     # "Test" is a required check, don't change the name
     name: Test
@@ -40,6 +39,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Rust toolchain install
         uses: dtolnay/rust-toolchain@stable
+      # TODO(#1974): Restore these steps once we fix risc0
       # Use cargo-risczero v1.2.0
       # The risc0-zkvm crate should match this version
       # - name: RISC-V RISC0 toolchain install
@@ -52,10 +52,10 @@ jobs:
       #   run: |
       #     cd crates/l2/prover
       #     cargo build --release --features build_risc0
-      - name: Test Prover Execution
-        run: |
-          cd crates/l2/prover
-          RUST_LOG=info make perf-risc0
+      # - name: Test Prover Execution
+      #   run: |
+      #     cd crates/l2/prover
+      #     RUST_LOG=info make perf-risc0
       - name: RISC-V SP1 toolchain install
         run: |
           curl -L https://sp1.succinct.xyz | bash
