--- a/.github/workflows/ci_l2_prover.yaml
+++ b/.github/workflows/ci_l2_prover.yaml
@@ -39,6 +39,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Rust toolchain install
         uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: 1.82.0
       # TODO(#1974): Restore these steps once we fix risc0
       # Use cargo-risczero v1.2.0
       # The risc0-zkvm crate should match this version
