--- a/crates/l2/prover/Cargo.toml
+++ b/crates/l2/prover/Cargo.toml
@@ -32,7 +32,6 @@ risc0-zkvm = { version = "1.2.2" }
 sp1-sdk = "4.1.0"
 
 [dev-dependencies]
-ethrex-vm.workspace = true
 ethrex-storage.workspace = true
 ethrex-blockchain.workspace = true
 
@@ -48,7 +47,10 @@ path = "src/main.rs"
 default = []
 build_risc0 = ["zkvm_interface/build_risc0"]
 build_sp1 = ["zkvm_interface/build_sp1"]
-l2 = ["ethrex-vm/l2"] # the prover can work with both l1 or l2 blocks
+l2 = [
+  "ethrex-vm/l2",
+  "zkvm_interface/l2",
+] # the prover can work with both l1 or l2 blocks
 gpu = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]
 
 [lints.clippy]
