--- a/crates/l2/prover/zkvm/interface/sp1/Cargo.toml
+++ b/crates/l2/prover/zkvm/interface/sp1/Cargo.toml
@@ -24,4 +24,4 @@ tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch
 
 
 [features]
-l2 = ["ethrex-vm/l2"]
+l2 = ["ethrex-vm/l2", "zkvm_interface/l2"]
