--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
 ethereum-types = { version = "0.15.1", features = ["serialize"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+toml = { version = "0.8.20", features = ["parse"] }
 libmdbx = { version = "0.5.0", features = ["orm"] }
 bytes = { version = "1.6.0", features = ["serde"] }
 tokio = { version = "1.41.1", features = ["full"] }
