exclude clippy from bench crate

--- a/.github/workflows/ci_l1.yaml
+++ b/.github/workflows/ci_l1.yaml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Run cargo clippy
         run: |
-          cargo clippy --all-targets --all-features --workspace --exclude ethrex-prover -- -D warnings
+          cargo clippy --all-targets --all-features --workspace --exclude ethrex-prover --exclude ethrex-prover-bench -- -D warnings
 
       - name: Run cargo fmt
         run: |
