--- a/cmd/ef_tests/blockchain/Cargo.toml
+++ b/cmd/ef_tests/blockchain/Cargo.toml
@@ -8,6 +8,7 @@ ethrex-blockchain.workspace = true
 ethrex-common.workspace = true
 ethrex-storage.workspace = true
 ethrex-rlp.workspace = true
+ethrex-vm.workspace = true
 
 serde.workspace = true
 serde_json.workspace = true
@@ -22,7 +23,8 @@ datatest-stable = "0.2.9"
 path = "./lib.rs"
 
 [features]
-default = ["c-kzg"]
+default = ["c-kzg", "blst"]
+blst = ["ethrex-vm/blst"]
 c-kzg = ["ethrex-blockchain/c-kzg"]
 
 [[test]]
