--- a/crates/l2/prover/Cargo.toml
+++ b/crates/l2/prover/Cargo.toml
@@ -22,11 +22,13 @@ ethrex-rlp.workspace = true
 
 # l2
 ethrex-l2.workspace = true
+ethrex-sdk.workspace = true
 
 zkvm_interface = { path = "./zkvm/interface", default-features = false }
 
 # risc0
-risc0-zkvm = { version = "1.2.2", optional = true }
+risc0-zkvm = { version = "1.2.2", optional = false }
+risc0-ethereum-contracts = { version = "1.3.1", optional = false }
 
 # sp1
 sp1-sdk = "4.1.0"
@@ -49,7 +51,7 @@ path = "src/main.rs"
 
 [features]
 default = []
-build_risc0 = ["zkvm_interface/build_risc0", "dep:risc0-zkvm"]
+build_risc0 = ["zkvm_interface/build_risc0"]
 build_sp1 = ["zkvm_interface/build_sp1"]
 build_pico = ["zkvm_interface/build_pico", "ethrex-l2/pico", "dep:pico-sdk"]
 sp1 = []
