remobe build_* features

--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -34,7 +34,7 @@ ethrex-sdk = { path = "./sdk" }
 zkvm_interface = { path = "./prover/zkvm/interface/", default-features = false }
 
 risc0-zkvm = { version = "1.2.2", optional = true }
-sp1-sdk = { version = "4.1.0" }
+sp1-sdk = { version = "4.1.0", optional = true }
 pico-vm = { git = "https://github.com/brevis-network/pico", optional = true }
 
 ethrex-metrics = { path = "../blockchain/metrics", default-features = false }
@@ -57,5 +57,6 @@ panic = "deny"
 [features]
 default = []
 metrics = ["ethrex-metrics/l2"]
-pico = ["dep:pico-vm"]
-risc0 = ["dep:risc0-zkvm"]
+pico = ["zkvm_interface/pico", "dep:pico-vm"]
+risc0 = ["zkvm_interface/risc0", "dep:sp1-sdk"]
+sp1 = ["zkvm_interface/sp1", "dep:risc0-zkvm"]
