--- a/crates/l2/prover/Cargo.toml
+++ b/crates/l2/prover/Cargo.toml
@@ -26,14 +26,11 @@ ethrex-sdk.workspace = true
 
 zkvm_interface = { path = "./zkvm/interface", default-features = false }
 
-# risc0
-risc0-zkvm = { version = "1.2.2", optional = false }
-risc0-ethereum-contracts = { version = "1.3.1", optional = false }
+risc0-zkvm = { version = "1.2.2", optional = true }
+risc0-ethereum-contracts = { version = "1.3.1", optional = true }
 
-# sp1
-sp1-sdk = "4.1.0"
+sp1-sdk = { version = "4.1.0", optional = true }
 
-# sp1
 pico-sdk = { git = "https://github.com/brevis-network/pico", optional = true }
 
 [dev-dependencies]
@@ -51,13 +48,15 @@ path = "src/main.rs"
 
 [features]
 default = []
-build_risc0 = ["zkvm_interface/build_risc0"]
-build_sp1 = ["zkvm_interface/build_sp1"]
-build_pico = ["zkvm_interface/build_pico", "ethrex-l2/pico", "dep:pico-sdk"]
-sp1 = []
-pico = []
-risc0 = []
-l2 = ["ethrex-vm/l2"]                                                        # the prover can work with both l1 or l2 blocks
+pico = ["zkvm_interface/pico", "ethrex-l2/pico", "dep:pico-sdk"]
+risc0 = [
+  "zkvm_interface/risc0",
+  "ethrex-l2/risc0",
+  "dep:risc0-zkvm",
+  "dep:risc0-ethereum-contracts",
+]
+sp1 = ["zkvm_interface/sp1", "ethrex-l2/sp1", "dep:sp1-sdk"]
+l2 = ["ethrex-vm/l2"] # the prover can work with both l1 or l2 blocks
 gpu = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]
 
 [lints.clippy]
