feat(l2): add prover benchmarks from L1 RPC downloaded blocks (#1705)
**Motivation**

We want to benchmark our block prover against other solutions, using
Ethereum mainnet/testnet blocks. For this we need to fetch state from an
Ethereum chain.

**Description**

- adds `l2/prover/bench` crate
- adds state fetching functions from the JSON-RPC API (account, block,
storage, proofs)
- adds a `RpcDB` type to download and cache needed state during block
execution
- adds an `execute()` function to the `Prover` type

Some bugs were discovered while testing execution of blocks:
- fixes state verification (via state and storage MPTs), `verify_db()`
- fixes withdrawals not being processed when using `ExecutionDB`
- fixes beacon root call state changes not being comitted when using
`ExecutionDB`
- fixes serialization errors in SP1 caused by the `requests_hash` field
of a block header

---------

Co-authored-by: Mario Rugiero <mrugiero@gmail.com>
Co-authored-by: fborello-lambda <federicoborello@lambdaclass.com>
Co-authored-by: Javier Chatruc <jrchatruc@gmail.com>
Co-authored-by: ilitteri <ilitteri@fi.uba.ar>

--- a/crates/l2/prover/Cargo.toml
+++ b/crates/l2/prover/Cargo.toml
@@ -29,7 +29,7 @@ zkvm_interface = { path = "./zkvm/interface", default-features = false }
 risc0-zkvm = { version = "1.2.2" }
 
 # sp1
-sp1-sdk = "4.0.1"
+sp1-sdk = "4.1.1"
 sp1-recursion-gnark-ffi = "4.1.1"
 
 [dev-dependencies]
@@ -46,12 +46,13 @@ path = "src/main.rs"
 
 [features]
 default = []
-## risc0
 build_risc0 = ["zkvm_interface/build_risc0"]
-gpu = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]
-## sp1
 build_sp1 = ["zkvm_interface/build_sp1"]
-
+l2 = [
+  "ethrex-vm/l2",
+  "zkvm_interface/l2",
+] # the prover can work with both l1 or l2 blocks
+gpu = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]
 
 [lints.clippy]
 unwrap_used = "deny"
