Move the default flag to crates/l2/prover/bench/Cargo.toml

--- a/crates/l2/prover/bench/Cargo.toml
+++ b/crates/l2/prover/bench/Cargo.toml
@@ -50,3 +50,4 @@ risc0 = ["zkvm_interface/build_risc0", "ethrex-prover/build_risc0"]
 sp1 = ["zkvm_interface/build_sp1", "zkvm_interface/build_sp1"]
 gpu = ["ethrex-prover/gpu"]
 l2 = ["ethrex-vm/l2", "zkvm_interface/l2"]
+default = ["sp1"]
