Add no default features flag to risc0

--- a/crates/l2/prover/bench/Makefile
+++ b/crates/l2/prover/bench/Makefile
@@ -7,18 +7,18 @@ sp1:
 sp1-gpu:
 	SP1_PROVER=cuda cargo r -r --features "sp1,gpu" -- --rpc-url ${RPC_URL} --block-number ${BLOCK_NUMBER}
 risc0:
-	cargo r -r --features risc0 -- --rpc-url ${RPC_URL} --block-number ${BLOCK_NUMBER}
+	cargo r -r --no-default-features --features risc0 -- --rpc-url ${RPC_URL} --block-number ${BLOCK_NUMBER}
 risc0-gpu:
-	cargo r -r --features "risc0,gpu" -- --rpc-url ${RPC_URL} --block-number ${BLOCK_NUMBER}
+	cargo r -r --no-default-features --features "risc0,gpu" -- --rpc-url ${RPC_URL} --block-number ${BLOCK_NUMBER}
 else
 sp1:
 	SP1_PROVER=cpu cargo r -r --features sp1 -- --rpc-url ${RPC_URL}
 sp1-gpu:
 	SP1_PROVER=cuda cargo r -r --features "sp1,gpu" -- --rpc-url ${RPC_URL}
 risc0:
-	cargo r -r --features risc0 -- --rpc-url ${RPC_URL}
+	cargo r -r --no-default-features --features risc0 -- --rpc-url ${RPC_URL}
 risc0-gpu:
-	cargo r -r --features "risc0,gpu" -- --rpc-url ${RPC_URL}
+	cargo r -r --no-default-features --features "risc0,gpu" -- --rpc-url ${RPC_URL}
 endif
 
 # Proving
@@ -28,16 +28,16 @@ prove-sp1:
 prove-sp1-gpu:
 	SP1_PROVER=cuda cargo r -r --features "sp1,gpu" -- --rpc-url ${RPC_URL} --prove --block-number ${BLOCK_NUMBER}
 prove-risc0:
-	cargo r -r --features risc0 -- --rpc-url ${RPC_URL} --prove --block-number ${BLOCK_NUMBER}
+	cargo r -r --no-default-features --features risc0 -- --rpc-url ${RPC_URL} --prove --block-number ${BLOCK_NUMBER}
 prove-risc0-gpu:
-	cargo r -r --features "risc0,gpu" -- --rpc-url ${RPC_URL} --prove --block-number ${BLOCK_NUMBER}
+	cargo r -r --no-default-features --features "risc0,gpu" -- --rpc-url ${RPC_URL} --prove --block-number ${BLOCK_NUMBER}
 else
 prove-sp1:
 	SP1_PROVER=cpu cargo r -r --features sp1 -- --rpc-url ${RPC_URL} --prove
 prove-sp1-gpu:
 	SP1_PROVER=cuda cargo r -r --features "sp1,gpu" -- --rpc-url ${RPC_URL} --prove
 prove-risc0:
-	cargo r -r --features risc0 -- --rpc-url ${RPC_URL} --prove
+	cargo r -r --no-default-features --features risc0 -- --rpc-url ${RPC_URL} --prove
 prove-risc0-gpu:
-	cargo r -r --features "risc0,gpu" -- --rpc-url ${RPC_URL} --prove
+	cargo r -r --no-default-features --features "risc0,gpu" -- --rpc-url ${RPC_URL} --prove
 endif
